--- a/settings.yaml
+++ b/settings.yaml
@@ -3,8 +3,10 @@ apiVersion: v1
 kind: Pod
 metadata:
  name: pod1
+ label: pod1
 spec:
   nodeName: cluster1-master1
   containers:
   - name: pod1-container
     image: httpd:2.4.41-alpine
+
