--- a/settings.yaml
+++ b/settings.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   nodeName: cluster1-master1
   containers:
-  - name: pod1-container
+  - name: http-container
     image: httpd:2.4.41-alpine
+    
 
